Added Widget Support, handles different configuration with data-*

--- a/src/App.css
+++ b/src/App.css
@@ -36,3 +36,78 @@
     transform: rotate(360deg);
   }
 }
+
+.quiz_widget__app {
+  font-size: 16px;
+  padding: 10px;
+  margin: 5px 10px;
+  font-family: IBMPlexSans, Arial, sans-serif;
+  -webkit-font-smoothing: antialiased;
+  color: #222;
+  box-shadow: 2px 2px 12px 0 rgba(0, 0, 0, 0.07);
+  border-radius: 12px;
+  overflow: hidden;
+  
+}
+
+.quiz_widget__app a {
+  color: #5399d7;
+  transition: 0.2s ease-in-out all;
+}
+
+.quiz_widget__header {
+  margin: 0;
+  display: block;
+  font-size: 19px;
+  padding: 12px 6px;
+  background: #5399d7;
+  color: white;
+  text-align: center;
+}
+
+.quiz_widget__header a {
+  color: #fff;
+}
+
+.quiz_widget__inner {
+  padding: 12px;
+}
+
+.quiz_widget__inner a {
+  color: #222;
+  text-decoration: none;
+}
+
+.quiz_widget__post {
+  display: flex;
+  flex-direction: column;
+  padding: 6px 0;
+}
+
+
+.quiz_widget__posted_by {
+  font-size: 14px;
+  color: rgb(120, 124, 126);
+  padding: 0 0 6px 0;
+}
+
+.quiz_widget__posted_by a {
+  color: rgb(120, 124, 126);
+}
+
+a.quiz_widget__posted_by:hover {
+  text-decoration: underline;
+}
+
+a.quiz_widget__title {
+  font-weight: 500;
+}
+
+a.quiz_widget__title:hover {
+  color: #000;
+}
+
+.quiz_widget__powered_by {
+  text-align: center;
+  font-size: 14px;
+}
