--- a/src/index.css
+++ b/src/index.css
@@ -1,14 +1,14 @@
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
 
@@ -96,21 +96,17 @@ button {
 
 .correct {
   background-color: #2f922f;
+  color: white !important;
 }
 
 .incorrect {
   background-color: #ff3333;
+  color: white !important;
 }
 
-button:hover {
-  animation-name: background-color;
-    animation-duration: 500ms;
-    }
-
-    @keyframes background-color {
-        100% {
-        background-color:#4065F3;
-    }
+.option:hover {
+  background-color: #555e7d;
+  color: white !important;
 }
 
 button:focus {
@@ -124,7 +120,7 @@ button svg {
 .shadow {
   margin: 40px;
   /* background-color: #ffffff; */
-  background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%); 
+  background-image: linear-gradient(315deg, #ffffff 0%, #d7e1ec 74%);
   -moz-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
   -webkit-box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
   box-shadow: 5px 5px 5px rgba(68, 68, 68, 0.6);
