--- a/src/index.css
+++ b/src/index.css
@@ -75,7 +75,7 @@ body {
   justify-content: space-between;
 }
 
-button {
+/* button {
   width: 100%;
   font-size: 16px;
   color: black !important;
@@ -88,7 +88,7 @@ button {
   border: 2px solid gray;
   cursor: pointer;
   margin: 2px auto;
-}
+} */
 
 .correct {
   background-color: #2f922f;
