Added responivess for question section

--- a/src/index.css
+++ b/src/index.css
@@ -40,10 +40,10 @@ body {
 }
 
 /* QUESTION/TIMER/LEFT SECTION */
-.question-section {
+/* .question-section {
   width: 100%;
   position: relative;
-}
+} */
 
 .question-count {
   margin-bottom: 20px;
