--- a/src/Components/Quiz/QuestionSection/style.css
+++ b/src/Components/Quiz/QuestionSection/style.css
@@ -2,9 +2,23 @@
   padding: 50px !important;
 }
 
+.start-game-container {
+  display: grid;
+  grid-auto-flow: column;
+  gap: 1em;
+}
+
 @media only screen and (max-width: 905px) {
   .question-section {
     padding: 50px 0 50px 0 !important;
+  }
+}
+
+@media only screen and (max-width: 455px) {
+  .start-game-container {
+    display: grid;
+    grid-auto-flow: row;
+    gap: 1em;
   }
 }
 
@@ -25,19 +39,19 @@
 
 @keyframes question {
   0% {
-    transform: scale(1, 1) translateY(0);
+    transform: translateY(0);
   }
   10% {
-    transform: scale(1.1, 1.1) translateY(30px);
+    transform: translateY(-30px);
   }
   30% {
-    transform:  scale(1.2, 1.2) translateY(0);
+    transform: translateY(0);
   }
   50% {
-    transform:  scale(1, 1) translateY(0);
+    transform: translateY(0);
   }
   100% {
-    transform: scale(1, 1) translateY(0);
+    transform: translateY(0);
   }
 }
 
@@ -49,4 +63,3 @@
   animation: question 2.5s infinite;
   animation-timing-function: ease;
 }
-
