--- a/src/Components/Layout/Dashboard/style.css
+++ b/src/Components/Layout/Dashboard/style.css
@@ -1,6 +1,5 @@
 .dashboard-background {
-  background: url('../../../images/background.jpg');
-  background-repeat: no-repeat;
+  background: #F5F7FA;
 }
 
 .container {
