--- a/src/Components/Layout/Dashboard/style.css
+++ b/src/Components/Layout/Dashboard/style.css
@@ -1,11 +1,13 @@
 .dashboard-background {
-  background: #F5F7FA;
+  background: transparent;
 }
 
 .container {
   width: 900px;
   position: relative;
   z-index: 10;
+  box-shadow: 0px 5px 20px 1px #e8e8e8 inset, 0 1px 3px rgba(0, 0, 0, 0.12),
+    0 1px 2px rgba(0, 0, 0, 0.24) !important;
 }
 
 .quiz-image {
@@ -31,7 +33,7 @@
     width: 200px;
   }
 
-  .question-image{
+  .question-image {
     opacity: 0.75;
   }
 }
