--- a/src/Components/Layout/Dashboard/style.css
+++ b/src/Components/Layout/Dashboard/style.css
@@ -8,6 +8,10 @@
   z-index: 10;
   box-shadow: 0px 5px 20px 1px #e8e8e8 inset, 0 1px 3px rgba(0, 0, 0, 0.12),
     0 1px 2px rgba(0, 0, 0, 0.24) !important;
+  background: url('../../../images/maths.png');
+  background-repeat: repeat;
+  background-position: top;
+  background-size: 50%;
 }
 
 .quiz-image {
