--- a/src/index.css
+++ b/src/index.css
@@ -14,7 +14,7 @@ code {
 
 
 body {
-  background-color: #7cc6fe;
+  background-color: #faf9f9;
   display: flex;
   justify-content: center;
   align-items: center;
