--- a/src/Components/Layout/Dashboard/style.css
+++ b/src/Components/Layout/Dashboard/style.css
@@ -3,11 +3,11 @@
 }
 
 .widget-container {
-  width: 900px;
   position: relative;
   z-index: 10;
   box-shadow: 0px 5px 20px 1px #e8e8e8 inset, 0 1px 3px rgba(0, 0, 0, 0.12),
     0 1px 2px rgba(0, 0, 0, 0.24) !important;
+  box-shadow: none !important;
   /* background: url('../../../images/maths.png');
   background-repeat: repeat;
   background-position: top;
@@ -29,9 +29,9 @@
 }
 
 @media only screen and (max-width: 800px) {
-  .widget-container {
+  /* .widget-container {
     width: 99vw;
-  }
+  } */
 }
 
 @media only screen and (max-width: 905px) {
